--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-raring (3.8.0.32.32) precise; urgency=low
+
+  * Ubuntu-lts-3.8.0-32.47
+
+ -- Steve Conklin <sconklin@canonical.com>  Wed, 02 Oct 2013 11:41:49 -0500
+
 linux-meta-lts-raring (3.8.0.31.31) precise; urgency=low
 
   * Ubuntu-lts-3.8.0-31.46
