--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.11.0-12.18) saucy; urgency=low
+
+  * Version 3.11.0-12.18
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 08 Oct 2013 20:33:37 +0000
+
 linux-signed (3.11.0-11.17) saucy; urgency=low
 
   * Version 3.11.0-11.17
