--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.11.0.12.13) saucy; urgency=low
+
+  * linux ABI 3.11.0-12
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 08 Oct 2013 14:35:16 -0600
+
 linux-meta (3.11.0.11.12) saucy; urgency=low
 
   * linux ABI 3.11.0-11
