--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-saucy (3.11.0.12.10) precise; urgency=low
+
+  * Ubuntu-lts-3.11.0-12
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Fri, 11 Oct 2013 11:35:19 -0600
+
 linux-meta-lts-saucy (3.11.0.11.9) precise; urgency=low
 
   * Ubuntu-lts-3.11.0-11
