--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.12.0.0.1) trusty; urgency=low
+
+  * linux ABI 3.12.0-0
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Fri, 18 Oct 2013 12:49:24 -0600
+
 linux-meta (3.11.0.12.13) saucy; urgency=low
 
   * linux ABI 3.11.0-12
