--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.12.0-0.2) trusty; urgency=low
+
+  * Version 3.12.0-0.2
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 21 Oct 2013 18:05:00 +0000
+
 linux-signed (3.12.0-0.1) trusty; urgency=low
 
   * Version 3.12.0-0.1
